- desk/icon.def desk/icon.rsc: Added icon resource. (RFB)

2012-08-16
- desk/icons.c po/POTFILES.in: Make icon descriptions translatable. (RFB)
- tools/erd.c: Fix bug in code generated by icon resource decompilation. (RFB)
- Makefile .cvsignore desk/.cvsignore: Add support for building icons.*
  from icon resource. (RFB)
- desk/icons.c desk/icons.h: Removed from CVS, now generated by ird. (RFB)
- doc/resource.txt: Updated to include information about ird. (RFB)
- desk/icons/*: Removed all files in directory from CVS, no longer used. (RFB)
- desk/deskapp.c desk/desktop.def desk/desktop.rsc include/config.h
  tools/erd.c: Code cleanup: move non-displayed/untranslated strings from
  desktop resource to C code. (RFB)

2012-08-17
- aes/gem.def aes/gem.rsc aes/gemaplib.c aes/geminit.c aes/geminit.h
  aes/gemobed.c aes/gemsclib.h aes/gemshlib.c tools/erd.c: Code cleanup:
  move non-displayed/untranslated strings from GEM resource to C code. (RFB)
- desk/deskapp.c desk/deskapp.h desk/icon.def desk/icon.rsc: Provide copies
  of generic app/doc icons for future use. (RFB)

2012-08-18
- desk/deskapp.h desk/deskins.c: Allow for future usage of only some of
  desktop icons. (RFB)

2012-08-19
- desk/deskapp.c desk/deskins.c: Allow ICONBLKs for 'Configure application'
  to be omitted. (RFB)
- desk/desktop.def desk/desktop.rsc desk/deskins.c: Move string to resource
  and make it translatable. (RFB)

2012-08-20
- desk/deskins.c desk/deskrsrc.c desk/deskrsrc.h: Code cleanup: simplify
  code & eliminate a global. (RFB)
- aes/gemfslib.c: Code cleanup: removed compatibility & OB_ macros. (RFB)

2012-08-21
- aes/gemctrl.c: Code cleanup: removed compatibility & OB_ macros. (RFB)

2012-08-22
- aes/gemrslib.c: Code cleanup: removed OB_ & related macros. (RFB)
- aes/optimize.c: Code cleanup: removed OB_ & compatibility macros. (RFB)
- aes/gemfslib.c aes/optimize.c aes/optimize.h: Code cleanup: eliminate
  some global functions. (RFB)